# better-logger

./: .gitignore  README.md  pyproject.toml
example/: example.py
src/better_logger/: __init__.py
tests/: better_log_test.py
